[package]
name = "rust_rocket_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.4.0"
rocket_contrib = "0.4.10"
serde_json = "1.0"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
